Closed Bug 1700375 Opened 3 years ago Closed 3 years ago

Double-tap to zoom is not working on (some) textareas

Categories

(Core :: Panning and Zooming, defect)

Firefox 89
All
macOS
defect

Tracking

()

VERIFIED FIXED
89 Branch
Tracking Status
firefox88 --- disabled
firefox89 --- verified

People

(Reporter: emilghitta, Assigned: tnikkel)

References

Details

Attachments

(2 files)

Affected versions

  • Firefox 89.0a1 (BuildId:20210323094659)
  • Firefox 88.0b1 is also affected but this feature is disabled by default on 88 beta builds.

Affected platforms

  • macOS 10.14
  • macOS 11.1

Unaffected platforms

  • Windows 10 64bit
  • Ubuntu 20.04

Steps to reproduce

  1. Launch Firefox.
  2. Access the following test case: data:text/html,%20 <textarea name="message" rows="10" cols="30">The cat was playing in the garden.</textarea>
  3. Double-tap to zoom inside the textarea field.

Expected result

  • The double-tap to zoom functionality is working on the textarea field (as in Safari).

Actual result

  • The double-tap to zoom functionality is not working on the textarea field.

Regression Range

  • I don’t think that this is a regression.

Notes

  • For further information regarding this issue, please access this link for screencast.
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
See Also: → 1700535
Has STR: --- → yes
Attachment #9211177 - Attachment description: Bug 1700375. Treat textareas as non-inline for the purposes of determining which element to zoom to for double tap to zoom. r?emilio → Bug 1700375. Treat replaced elements as non-inline for the purposes of determining which element to zoom to for double tap to zoom. r?emilio

Depends on D109574

Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b974265bd38f
Treat replaced elements as non-inline for the purposes of determining which element to zoom to for double tap to zoom. r=emilio
https://hg.mozilla.org/integration/autoland/rev/48d10ca94fa6
Add test. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

This issue is verified fixed using Firefox 89.0a1 (BuildId:20210408095111) on macOS 10.15

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: