Bug 1700375. Treat replaced elements as non-inline for the purposes of determining which element to zoom to for double tap to zoom. r=emilio

The specific case that motivated this was text areas, but in bug 1700535 we changed those to inline block to match all other input elements and other browsers.

Bug 1539469 changed all inputs to inline-block based on the spec discussion https://github.com/whatwg/html/issues/4082 but textarea's were not part of that.

<img> elements remain as inline though, and we probably do want to zoom to them (and they are replaced), so this change is still desirable.

Differential Revision: https://phabricator.services.mozilla.com/D109574